[gd_scene load_steps=14 format=3 uid="uid://fc51jdcfp0ar"]

[ext_resource type="PackedScene" uid="uid://bls74xd6ltpph" path="res://Models/sail_ship2.tscn" id="1_6ie6l"]
[ext_resource type="Script" path="res://Characters/treasure_door.gd" id="1_vxuin"]
[ext_resource type="PackedScene" uid="uid://bisaoegsvgy3r" path="res://Models/sail_ship.tscn" id="2_bk4dv"]
[ext_resource type="Material" uid="uid://djof04lbore15" path="res://Materials/wood_top.tres" id="3_ihvrv"]
[ext_resource type="Script" path="res://Logic/inside.gd" id="4_hj6ds"]
[ext_resource type="PackedScene" uid="uid://uh8y7efhoco0" path="res://Characters/chest_model.tscn" id="6_2u0g0"]
[ext_resource type="PackedScene" uid="uid://jbe57tkjganp" path="res://Models/house_door.tscn" id="6_g2ego"]
[ext_resource type="Script" path="res://CameraController.gd" id="8_b3sew"]
[ext_resource type="AudioStream" uid="uid://c4eyiojejmyrg" path="res://Sounds/open_door.wav" id="9_0fbke"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fkfjy"]
size = Vector3(51.479, 1.169, 7.12)

[sub_resource type="BoxShape3D" id="BoxShape3D_kp4s0"]
size = Vector3(5, 4.98359, 4.90393)

[sub_resource type="BoxShape3D" id="BoxShape3D_aorb2"]
size = Vector3(21.2502, 16.0215, 16.5927)

[sub_resource type="BoxShape3D" id="BoxShape3D_txrg8"]
size = Vector3(21.2502, 7.90774, 20)

[node name="sail_ship3" type="Node3D"]
script = ExtResource("1_vxuin")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.02273, 0)
light_energy = 5.252
light_volumetric_fog_energy = 0.0
omni_range = 62.639

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 19.733, -44.8817)
light_energy = 3.056
light_volumetric_fog_energy = 0.0
omni_range = 62.639

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(0.91373, 0.406322, 0, -0.406322, 0.91373, 0, 0, 0, 1, 36.0985, 9.66758, 0)
size = Vector3(51.4787, 1.16937, 7.12044)
material = ExtResource("3_ihvrv")

[node name="StaticBody3D" type="StaticBody3D" parent="CSGBox3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGBox3D/StaticBody3D"]
shape = SubResource("BoxShape3D_fkfjy")

[node name="Chest" parent="." instance=ExtResource("6_2u0g0")]
transform = Transform3D(-2.18557e-07, -4.10667e-16, -5, -0.641728, 4.95865, 2.80508e-08, 4.95865, 0.641728, -2.16749e-07, 8.89639, 9.81934, -37.1572)

[node name="Chest3" parent="." instance=ExtResource("6_2u0g0")]
transform = Transform3D(-2.16737e-07, 2.81492e-08, 5, 0.643978, 4.95836, 0, -4.95836, 0.643978, -2.18557e-07, -8.896, 9.84378, -37.154)

[node name="Chest2" parent="." instance=ExtResource("6_2u0g0")]
transform = Transform3D(-2.18557e-07, -4.10667e-16, -5, -0.641728, 4.95865, 2.80508e-08, 4.95865, 0.641728, -2.16749e-07, 8.89639, 10.5452, -42.2692)

[node name="Chest4" parent="." instance=ExtResource("6_2u0g0")]
transform = Transform3D(-2.16737e-07, 2.81492e-08, 5, 0.643978, 4.95836, 0, -4.95836, 0.643978, -2.18557e-07, -8.896, 10.545, -42.269)

[node name="Sail Ship" parent="." instance=ExtResource("2_bk4dv")]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 25, 0, 0, 0)
visible = false

[node name="Sail Ship2" parent="." instance=ExtResource("1_6ie6l")]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 25, 0, 0, 0)

[node name="House Door2" parent="." instance=ExtResource("6_g2ego")]
transform = Transform3D(2.5, 0, 0, 0, 2.4993, 0.0593356, 0, -0.0593356, 2.4993, -3.79958, 9.62808, -33.9185)

[node name="Area3D2" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.724875, 12.7654, -35.2102)
shape = SubResource("BoxShape3D_kp4s0")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("4_hj6ds")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18.0072, -48.5127)
shape = SubResource("BoxShape3D_aorb2")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.571561, 13.992, -38.9355)
shape = SubResource("BoxShape3D_txrg8")

[node name="CameraController" type="RemoteTransform3D" parent="."]
transform = Transform3D(-1, -7.6194e-09, 8.70901e-08, 0, 0.996195, 0.0871557, -8.74228e-08, 0.0871557, -0.996195, -1.32646, 12.6853, -35.0685)
script = ExtResource("8_b3sew")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4.44944e-09, 11.9926, -51.1895)
visibility_range_end = 20.0
text = "brainoid was here

also, you are stuck now"
font_size = 64

[node name="OpenDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0fbke")
bus = &"sfx"

[connection signal="body_entered" from="Area3D2" to="." method="_on_area_3d_2_body_entered"]
[connection signal="body_exited" from="Area3D2" to="." method="_on_area_3d_2_body_exited"]
[connection signal="body_entered" from="Area3D" to="Area3D" method="_on_body_entered"]
[connection signal="body_exited" from="Area3D" to="Area3D" method="_on_body_exited"]
